# datwire

./: .gitignore
backend/: Cargo.toml
datwire-app/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
datwire-app/src/: App.svelte  Dialog.svelte  app.html
datwire-app/src/components/: ActionButton.svelte  DialogPage.svelte  Input.svelte  InputBox.svelte  TextInput.svelte
datwire-app/src/lib/i18n/: index.ts
datwire-app/src/lib/i18n/locales/: en.json  hu.json  ru.json  ua.json
datwire-app/src/routes/: +layout.ts  +page.svelte
datwire-app/src/routes/login/: +page.svelte
datwire-app/src/routes/register/: +page.svelte
datwire-app/src/utils/: crossfade.ts  request.ts
datwire-app/static/: global.css
datwire-backend/: Cargo.toml  sqlx-data.json
datwire-backend/migration/src/: m20220101_000001_create_table.rs
datwire-backend/migrations/: 20230404001738_create_tables.down.sql  20230404001738_create_tables.up.sql
datwire-backend/src/: action.rs  consts.rs  main.rs
datwire-backend/src/api/: register.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
