[package]
name = "datwire"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
sea-orm = { version = "^0", features = [
  "sqlx-postgres", 
  "runtime-tokio-rustls", 
  "macros", 
  "with-chrono", 
  "with-uuid"
]}
