[package]
name = "datwire"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
